--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -46,6 +46,9 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="16dp"
         android:gravity="center_vertical"
+        android:onClick="createPhoneIntent"
+        android:clickable="true"
+        android:focusable="true"
         android:text="(012)345-6789"
         android:textColor="?android:attr/actionMenuTextColor"
         android:textSize="18sp"
